--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会分享，2021年1月
       </li>
       <li>
+        <a href="./mathreason/index.html?p=mathreason.md">数学推理</a>，2023年5月
+      </li>
+      <li>
         <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈会，2022年6月
       </li>
       <li>
