--- a/fallacy/index.html
+++ b/fallacy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>分享</title>
+    <title>逻辑谬误</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="../assets/katex.min.css" />
     <link rel="stylesheet" href="../assets/style.css" />
