--- a/index.html
+++ b/index.html
@@ -7,22 +7,33 @@
 
   <body>
 
+  <h1>中学</h1>
+
     <ul>
       <li>
-        <a href="./fcc/fcc.html">全人教育下资源受限高中生的前端编程教育</a>，FCC分享，2020年5月
+        <a href="./fcc/fcc.html">学习编程和编程教学，如何更高效更有趣</a>，FCC分享，2020 年 5 月
       </li>
       <li>
-        <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会分享，2021年1月
+        <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会分享，2021 年 1 月
       </li>
       <li>
-        <a href="./mathreason/index.html?p=mathreason.md">数学推理</a>，2023年5月
-      </li>
-      <li>
-        <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈会，2022年6月
-      </li>
-      <li>
-        <a href="./teach/index.html?p=learn.md">找到自己的绝活</a>，研究生入学座谈会，2022年9月
+        <a href="./fallacy/index.html?p=fallacy.md">逻辑谬误</a>，交大附中，2023 年 5 月
       </li>
     </ul>
+
+  <h1>大学</h1>
+
+  <ul>
+    <li>
+      <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈会，2022 年 6 月
+    </li>
+    <li>
+      <a href="./teach/index.html?p=learn.md">找到自己的绝活</a>，研究生入学座谈会，2022 年 9 月
+    </li>
+    <li>
+      <a href="https://www.bilibili.com/video/BV1jM4y1j7Ja/">勇于求知</a>，研究生招生宣讲，2023 年 7 月
+    </li>
+  </ul>
+
   </body>
 </html>
