--- a/fcc/fcc.html
+++ b/fcc/fcc.html
@@ -6,10 +6,10 @@
   </head>
 
   <body>
-    <h2>全人教育下资源受限高中生的前端编程教育</h2>
+    <h2>学习编程和编程教学，如何更高效更有趣</h2>
 
     <h3>
-      “为资源贫乏的高中生提供技能、经验和联系、使他们能够进入软件技术职业”
+      “为高中生提供技能、经验和联系、使他们能够进入软件技术职业”
     </h3>
 
     <p>陈一帅</p>
