--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会分享，2021 年 1 月
       </li>
       <li>
+        <a href="./shiwu/index.html?p=lec3.md">永远也不要停下来</a>，实务学堂白露营寄语赠言，2023 年 12 月
+      </li>
+      <li>
         <a href="./fallacy/index.html?p=fallacy.md">逻辑谬误</a>，交大附中，2023 年 5 月
       </li>
     </ul>
