--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
   <body>
 
+  <h1>艺术</h1>
+
+  <ul>
+    <li>
+      <a href="./ai/index.html?p=1-draw-basic.md">AI 绘画入门</a>，同心，2024 年 3 月
+    </li>
+  </ul>
+
   <h1>中学</h1>
 
     <ul>
