--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 
   <body>
 
-  <h1>艺术</h1>
+  <h1>AI 绘画</h1>
+  同心，2024 年 3 月
 
   <ul>
     <li>
-      <a href="./ai/index.html?p=1-draw-basic.md">AI 绘画入门</a>，同心，2024 年 3 月
+      <a href="./ai/index.html?p=1-draw-basic.md">AI 绘画</a>
+    </li>
+    <li>
+      <a href="./ai/index.html?p=3-draw-me.md">我是谁，在哪里</a>
+    </li>
+    <li>
+      <a href="./ai/index.html?p=5-draw-digital.md">数字艺术</a>
+    </li>
+    <li>
+      <a href="./ai/index.html?p=7-draw-art.md">艺术家风格</a>
     </li>
   </ul>
 
