--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
       <a href="./ai/index.html?p=1-draw-basic.md">AI 绘画</a>
     </li>
     <li>
-      <a href="./ai/index.html?p=3-draw-me.md">我是谁，在哪里</a>
+      <a href="./ai/index.html?p=3-draw-me.md">我是谁？</a>
+    </li>
+    <li>
+      <a href="./ai/index.html?p=4-draw-where.md">我在哪？</a>
     </li>
     <li>
       <a href="./ai/index.html?p=5-draw-digital.md">数字艺术</a>
     </li>
     <li>
-      <a href="./ai/index.html?p=7-draw-art.md">艺术家风格</a>
+      <a href="./ai/index.html?p=7-draw-art-classic.md">艺术家</a>
     </li>
+    <li>
+      <a href="./ai/index.html?p=9-draw-art-modern.md">现代艺术</a>
+    </li>
+
   </ul>
 
   <h1>中学</h1>
