--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <li>
       <a href="./ai/index.html?p=9-draw-art-modern.md">现代艺术</a>
     </li>
+    <li>
+      <a href="./ai/index.html?p=11-draw-photo.md">摄影</a>
+    </li>
 
   </ul>
 
