--- a/index.html
+++ b/index.html
@@ -7,32 +7,11 @@
 
   <body>
 
-  <h1>AI 绘画</h1>
-  同心，2024 年 3 月
-
+  <h1>小学</h1>
   <ul>
     <li>
-      <a href="./ai/index.html?p=1-draw-basic.md">AI 绘画</a>
+      <a href="./ai/draw.html">AI 绘画</a>，北京皮村同心友好空间，2024 年 3 月
     </li>
-    <li>
-      <a href="./ai/index.html?p=3-draw-me.md">我是谁？</a>
-    </li>
-    <li>
-      <a href="./ai/index.html?p=4-draw-where.md">我在哪？</a>
-    </li>
-    <li>
-      <a href="./ai/index.html?p=5-draw-digital.md">数字艺术</a>
-    </li>
-    <li>
-      <a href="./ai/index.html?p=7-draw-art-classic.md">艺术家</a>
-    </li>
-    <li>
-      <a href="./ai/index.html?p=9-draw-art-modern.md">现代艺术</a>
-    </li>
-    <li>
-      <a href="./ai/index.html?p=11-draw-photo.md">摄影</a>
-    </li>
-
   </ul>
 
   <h1>中学</h1>
