--- a/ai/draw.html
+++ b/ai/draw.html
@@ -25,31 +25,31 @@
 
   <ul>
     <li>
-      <a href="./ai/index.html?p=1-basic.md">基础</a>：1）掌握 AI 绘画工具；2）掌握基本写作技能：主题、心情、动作、环境；3）掌握基本绘画技巧：风格、角度、远近、形式；4）发现自己：情绪、积极/消极、平静/激动
+      <a href="./index.html?p=1-basic.md">基础</a>：1）掌握 AI 绘画工具；2）掌握基本写作技能：主题、心情、动作、环境；3）掌握基本绘画技巧：风格、角度、远近、形式；4）发现自己：情绪、积极/消极、平静/激动
     </li>
     <li>
-      <a href="./ai/index.html?p=3-me.md">我是谁？</a>：1）认识自己；2）想象自己的未来：外形，服装，角色，职业，怎么改变；2）艺术风格：铅笔、蜡笔、丝网印刷；3）艺术表达：光的使用、画家；4）建立连接：给家人、朋友、偶像画像
+      <a href="./index.html?p=3-me.md">我是谁？</a>：1）认识自己；2）想象自己的未来：外形，服装，角色，职业，怎么改变；2）艺术风格：铅笔、蜡笔、丝网印刷；3）艺术表达：光的使用、画家；4）建立连接：给家人、朋友、偶像画像
     </li>
     <li>
-      <a href="./ai/index.html?p=4-where.md">我在哪？</a>：1）认识世界，我现在所在的环境；2）认识自己：我喜欢的活动，我想要的环境，我想去哪里，怎么改变；3）和世界建立连接：春节过年时的场景
+      <a href="./index.html?p=4-where.md">我在哪？</a>：1）认识世界，我现在所在的环境；2）认识自己：我喜欢的活动，我想要的环境，我想去哪里，怎么改变；3）和世界建立连接：春节过年时的场景
     </li>
     <li>
-      <a href="./ai/index.html?p=5-digital.md">数字艺术</a>：艺术的表达：游戏、动画、3D 效果、漫画家
+      <a href="./index.html?p=5-digital.md">数字艺术</a>：艺术的表达：游戏、动画、3D 效果、漫画家
     </li>
     <li>
-      <a href="./ai/index.html?p=7-art-classic.md">古典艺术</a>：1）艺术的表达，提高审美能力：文艺复兴、印象派、中国画、艺术家；2）与世界建立连接
+      <a href="./index.html?p=7-art-classic.md">古典艺术</a>：1）艺术的表达，提高审美能力：文艺复兴、印象派、中国画、艺术家；2）与世界建立连接
     </li>
     <li>
-      <a href="./ai/index.html?p=9-art-modern.md">现代艺术</a>：1）艺术的表达，提高审美能力；2）发现自己：通过现代艺术实现自我
+      <a href="./index.html?p=9-art-modern.md">现代艺术</a>：1）艺术的表达，提高审美能力；2）发现自己：通过现代艺术实现自我
     </li>
     <li>
-      <a href="./ai/index.html?p=11-photo.md">摄影</a>：1）艺术的表达；2）认识世界：国际国内新闻摄影、人物摄影，我身边的新闻、人物、地点摄影
+      <a href="./index.html?p=11-photo.md">摄影</a>：1）艺术的表达；2）认识世界：国际国内新闻摄影、人物摄影，我身边的新闻、人物、地点摄影
     </li>
     <li>
-      <a href="./ai/index.html?p=13-3d.md">雕塑和手工</a>：1）艺术的表达；2）与世界建立连接：给家人设计、制作一个雕塑、手工
+      <a href="./index.html?p=13-3d.md">雕塑和手工</a>：1）艺术的表达；2）与世界建立连接：给家人设计、制作一个雕塑、手工
     </li>
     <li>
-      <a href="./ai/index.html?p=15-work.md">职业</a>：1）与世界建立连接：为身边的家人、朋友、学校、活动，设计海报、产品、服装、食品
+      <a href="./index.html?p=15-work.md">职业</a>：1）与世界建立连接：为身边的家人、朋友、学校、活动，设计海报、产品、服装、食品
     </li>
   </ul>
 
