--- a/ai-draw/draw.html
+++ b/ai-draw/draw.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AI 绘画</title>
+    <title>AI 帮我画</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
   <body>
 
-  <h1>基于 AI 绘画的儿童艺术通识</h1>
+  <h1>基于 AI 绘画的美育通识</h1>
 
   <p>北京皮村同心友好空间，2024 年 3 月 - 6 月</p>
 
