--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <h1>小学</h1>
   <ul>
     <li>
-      <a href="./ai-draw/draw.html">AI 绘画</a>，北京皮村同心友好空间，2024 年 3 月
+      <a href="./ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月
     </li>
     <li>
-      <a href="./ai-chat/chat.html">AI 助手</a>，北京皮村同心友好空间，2024 年 6 月
+      <a href="./ai-chat/chat.html">AI 帮我忙</a>，北京皮村同心友好空间，2024 年 6 月
     </li>
   </ul>
 
