--- a/ai-chat/chat.html
+++ b/ai-chat/chat.html
@@ -50,7 +50,7 @@
         <ul>
           <li>指定它的人设，也告诉它：我是谁</li>
           <li>给出背景，举例、问具体</li>
-          <li>提要求：要例子、设定语气、长度、格式、</li>
+          <li>提要求：要例子、设定语气、长度、格式、一步一步想</li>
         </ul>
         <li>技巧</li>
         <ul>
@@ -60,10 +60,26 @@
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=.md"></a>
+      <a href="./index.html?p=3-critical.md">要良臣</a>
       <ul>
-        <li></li>
-        <li></li>
+        <li>AI 是忠臣：会顺着你说</li>
+        <li>要忠臣，更要良臣：不仅忠诚，而且有独立思考和判断能力</li>
+        <li>要良臣</li>
+        <ul>
+          <li>不引导式提问，要开放式提问</li>
+          <li>要它检查我们的逻辑</li>
+          <li>要它指出我们可能的错误之处</li>
+          <li>要它提出反对意见</li>
+        </ul>
+        <li>有判断力</li>
+        <ul>
+          <li>AI 说的不一定是对的，它会编造事实</li>
+          <li>用不同问法问，问不同的模型，比较结果</li>
+          <li>检查它的逻辑、依据、信源</li>
+          <li>要它既谈优点又谈缺点</li>
+          <li>指出它的错误，要求它更正</li>
+          <li>要它再次确认</li>
+        </ul>
       </ul>
     </li>
   </ul>
