--- a/ai-chat/chat.html
+++ b/ai-chat/chat.html
@@ -42,7 +42,7 @@
 
   <ul>
     <li>
-      <a href="./index.html?p=1-question.md">问问题</a>
+      <a href="./index.html?p=1-1-question.md">问问题</a>
       <ul>
         <li>有问题问 AI</li>
         <li>AI 回答问题的原理：听上半句，猜下半句</li>
@@ -57,29 +57,69 @@
           <li>请继续、问还要什么、请帮问、补充信息、请重答</li>
           <li>换话题时，新建聊天</li>
         </ul>
+        <li><a href="./index.html?p=1-3-case.md">成为专家</a></li>
+        <ul>
+          <li>生活专家：影视推荐、菜谱设计、营养建议、美食文案</li>
+          <li>解决问题专家：问题分析、方案设计、医学报告解读</li>
+        </ul>
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=3-critical.md">要良臣</a>
+      <a href="./index.html?p=2-1-critical.md">自己判断</a>
       <ul>
-        <li>AI 是忠臣：会顺着你说</li>
-        <li>要忠臣，更要良臣：不仅忠诚，而且有独立思考和判断能力</li>
-        <li>要良臣</li>
+        <li>AI 会顺着我们说</li>
+        <li>不引导，要它检查、要它反对</li>
+        <li>要判断：AI 说的不一定对，要比较、检查、优缺点都谈、确认</li>
+        <li><a href="./index.html?p=2-3-case.md">成为专家</a></li>
         <ul>
-          <li>不引导式提问，要开放式提问</li>
-          <li>要它检查我们的逻辑</li>
-          <li>要它指出我们可能的错误之处</li>
-          <li>要它提出反对意见</li>
+          <li>事实核查、深度思考、六顶思考帽</li>
+          <li>“云雨伞”、系统决策、风险预案</li>
         </ul>
-        <li>有判断力</li>
+      </ul>
+
+    </li>
+    <li>
+      <a href="./index.html?p=3-reform.md">寻找更好的问题</a>
+      <ul>
+        <li>识别、分析和描述问题</li>
+        <li>诊断：5 Why，追问根原因</li>
+        <li>分解</li>
+        <li>重构：问题原因多方面，寻找更好问题，改变问题的陈述</li>
+        <li>约束：描绘问题范围和边界</li>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=4-1-apply.md">求职和申请</a>
+      <ul>
+        <li>了解学校/职位要求、收益、薪水</li>
+        <li>准备材料</li>
+          <ul>
+            <li>申请材料、申请信、简历</li>
+            <li>检查材料是否和要求匹配、吸引人，贡献量化</li>
+          </ul>
+        <li>模拟面试</li>
+          <ul>
+            <li>生成行为面试、技术面试问题</li>
+            <li>模拟面试官态度、语调、难度</li>
+            <li>要求得到面试反馈：STAR 方法</li>
+          </ul>
+        <li><a href="./index.html?p=4-3-case.md">成为专家</a></li>
         <ul>
-          <li>AI 说的不一定是对的，它会编造事实</li>
-          <li>用不同问法问，问不同的模型，比较结果</li>
-          <li>检查它的逻辑、依据、信源</li>
-          <li>要它既谈优点又谈缺点</li>
-          <li>指出它的错误，要求它更正</li>
-          <li>要它再次确认</li>
+          <li>应聘：职业导航、个人介绍、面试模拟</li>
+          <li>招聘：岗位说明</li>
         </ul>
+        </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=5-product.md">产品创意与经营</a>
+      <ul>
+        <li>创意：产品创意、活动创意</li>
+        <li>宣传：产品宣传、课程宣称</li>
+        <li>案例：构思和开发一个新产品</li>
+        <ul>
+          <li>创意、分析、写作、说服</li>
+        </ul>
+        <li>用户访谈、数据分析和公司战略咨询</li>
       </ul>
     </li>
   </ul>
