--- a/ai-draw/draw.html
+++ b/ai-draw/draw.html
@@ -121,18 +121,34 @@
     <li>Fandom 各种美学风格列表：<a href="https://aesthetics.fandom.com/wiki/List_of_Aesthetics">网页</a></li>
     <li>Wikipedia 艺术运动列表：<a href="https://en.wikipedia.org/wiki/Art_movement">网页</a></li>
     <li>秦老师，如何用AI画一部武侠漫画？画完后，我沉默了，2024-02-20，<a href="https://mp.weixin.qq.com/s/o3yGQxrzBhVXn5R7ew0ndw">微信公众号</a></li>
+    <li>Kimi + Midjourney 出天仙般的图文小故事（上），杠上 AI 的 Conny 姐，80后的AIGC时代 2024-04-10， <a href="https://mp.weixin.qq.com/s/ASQmRwuJ8jp9SjipqQNG2w">微信公众号</a>  </li>
+    <li>AI 绘画，通往 AGI 之路，<a href="https://waytoagi.feishu.cn/wiki/Q5ddwxfkMiVUZBkQXN7cgXf4nOb">飞书</a></li>
   </ul>
 
   <h2>工具</h2>
   <ul>
+    <li>Syncport.ai，上传自己的照片，选择模板，制作自己的肖像、雕像，<a href="http://aigc.syncport.ai/">网站</a></li>
+    <li>AIGC 艺术百科全书，<a href="http://aigc-exp.vfyang.com/">网站</a></li>
     <li><a href="https://clipdrop.co/">Clip Drop</a>: 图像后处理，生成填充、背景去除、图像放大 x2、重新照明、天空替换、文本删除</li>
     <li>后期处理：<a href="https://www.canva.com/">Canva</a></li>
     <li>无界 AI 设计，<a href="https://www.wujieai.com">网站</a></li>
-    <li>Liblib AI 设计，<a href="https://www.liblib.art">网站</a></li>
+    <li>哩布哩布 Liblib AI 设计，<a href="https://www.liblib.art">网站</a></li>
     <li>Deep Nostalgia，像哈利波特电影中那样，让照片动起来，<a href="https://www.myheritage.cn/deep-nostalgia">网站</a></li>
     <li>Krea，将简单草图和提示转换为图像，<a href="https://kreaai.net/playground">网站</a></li>
     <li>OpenArt，<a href="https://openart.ai/home">网站</a></li>
     <li>微软，图像创造器，<a href="https://designer.microsoft.com/image-creator">网站</a></li>
+    <li>AI 灵创提词器<a href="https://frozenland.cc/teleprompter.html">网站</a></li>
+    <li>图零学院 2023 年 AI 应用推荐，<a href="https://www.xueyuan.ai/ai-app">网页</a></li>
+    <li>设计 AI 应用：稿定 AI、即时 AI、Master Go AI</li>
+    <li>创意：美图设计室、创无记 2049、KREA 即时绘画</li>
+    <li>PPT：Boardmix，讯飞智文，歌者 AI</li>
+    <li>视频：剪映、腾讯智影、即创 AI</li> 
   </ul>
-  </body>
+
+  <h2>记录</h2>
+  <ul>
+    <li>当童心遇上AI艺术 | 人工智能系列课程第一课——AI绘画体验，同心儿童友好空间未来学习中心，2024-04-11，<a href="https://mp.weixin.qq.com/s/AAJ2ysi3RNObU2bhZu-Nnw">微信公众号</a>  </li>
+  </ul>
+  
+</body>
 </html>
