--- a/ai-solve/solve.html
+++ b/ai-solve/solve.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AI 帮我忙</title>
+    <title>AI 解难题</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
   <body>
 
-  <h1>基于 AI 帮忙的自立课</h1>
+  <h1>AI 解难题</h1>
 
   <p>北京皮村同心友好空间，2024 年 3 月 - 6 月</p>
 
@@ -27,14 +27,11 @@
     <ul>
       <li>课上研讨，包括分享、提问、回答、合作；</li>
     </ul>
-    <li>写作</li>
-    <ul>
-      <li>学习各种词汇，练习写作提示，细致地描绘脑海中的图画；</li>
-    </ul>
     <li>批判性思维</li>
     <ul>
       <li>自己判断</li>
     </ul>
+    <li>解决问题</li>
   </ul>
   </p>
 
@@ -59,8 +56,8 @@
         </ul>
         <li><a href="./index.html?p=1-3-case.md">成为专家</a></li>
         <ul>
-          <li>生活专家：影视推荐、菜谱设计、营养建议、美食文案</li>
-          <li>解决问题专家：问题分析、方案设计、医学报告解读</li>
+          <li>生活专家：影视推荐、菜谱设计、营养建议、美食文案、医学报告解读</li>
+          <li>解决问题专家：问题分析、方案设计、报告写作</li>
         </ul>
       </ul>
     </li>
@@ -88,48 +85,17 @@
         <li>约束：描绘问题范围和边界</li>
       </ul>
     </li>
-    <li>
-      <a href="./index.html?p=4-1-apply.md">求职和申请</a>
-      <ul>
-        <li>了解学校/职位要求、收益、薪水</li>
-        <li>准备材料</li>
-          <ul>
-            <li>申请材料、申请信、简历</li>
-            <li>检查材料是否和要求匹配、吸引人，贡献量化</li>
-          </ul>
-        <li>模拟面试</li>
-          <ul>
-            <li>生成行为面试、技术面试问题</li>
-            <li>模拟面试官态度、语调、难度</li>
-            <li>要求得到面试反馈：STAR 方法</li>
-          </ul>
-        <li><a href="./index.html?p=4-3-case.md">成为专家</a></li>
-        <ul>
-          <li>应聘：职业导航、个人介绍、面试模拟</li>
-          <li>招聘：岗位说明</li>
-        </ul>
-        </ul>
-    </li>
-    <li>
-      <a href="./index.html?p=5-product.md">产品创意与经营</a>
-      <ul>
-        <li>创意：产品创意、活动创意</li>
-        <li>宣传：产品宣传、课程宣称</li>
-        <li>案例：构思和开发一个新产品</li>
-        <ul>
-          <li>创意、分析、写作、说服</li>
-        </ul>
-        <li>用户访谈、数据分析和公司战略咨询</li>
-      </ul>
-    </li>
   </ul>
 
-  <h2>参考</h2>
+  <h2>项目</h2>
   <ul>
+    <li>同心社区休闲小花园设计项目：8 位妈妈，在人工智能助手的帮助下，完成需求分析、整理、多功能空间方案设计，强调舒适、放松、户外等特色，风格比较（地中海休闲风格、亚洲田园风格），说明地砖限制等。然后在人工智能的帮助下，形成会议记录、项目计划、分组讨论安排，最后，人工智能出效果图，讨论形成初步方案。<a href="https://kimi.moonshot.cn/share/com7qshkqq4h6lb1mjs0">Kimi 对话记录</a></li>
   </ul>
 
   <h2>工具</h2>
   <ul>
+    <li>热心网友，提示词图书馆，<a href="
+      https://vxc3hj17dym.feishu.cn/wiki/VDb1wMKDNiNj0mkJn6VcFgRenVc">飞书文档</a></li>
   </ul>
   </body>
 </html>
