--- a/ai-career/career.html
+++ b/ai-career/career.html
@@ -65,6 +65,7 @@
         <li><a href="./index.html?p=5-3-case.md">成为专家</a></li>
         <ul>
           <li>商业模式分析、行业入门介绍、行业研究分析</li>
+          <li>企业调研、报告写作、PPT 制作</li>
         </ul>
       </ul>
     </li>
@@ -94,6 +95,19 @@
         </ul>
       </ul>
     </li>
+    <li>
+      <a href="./index.html?p=8-1-write.md">公文写作</a>
+      <ul>
+        <li>方法：提供范文、关键词、口吻、大纲、步骤</li>
+        <li>改写：风格、对象、长度</li>
+        <li>转换：表格、列表</li>
+        <li><a href="./index.html?p=8-3-case.md">成为专家</a></li>
+        <ul>
+          <li>宣传材料、公文</li>
+        </ul>
+      </ul>
+    </li>
+
   </ul>
 
   <h2>项目</h2>
