--- a/ai-draw/draw.html
+++ b/ai-draw/draw.html
@@ -69,38 +69,40 @@
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=4-sculpture-craft.md">我做手工</a>
-      <ul>  
-        <li>雕塑：水晶、陶瓷、米糕、植物</li>
-        <li>手工：挂毯、刺绣、娃娃、折纸、乐</li>
-      </ul>
-    </li>
-    <li>
-      <a href="./index.html?p=6-career.md">我的职业</a>
-      <ul>  
-        <li>各种职业</li>
-        <li>数字艺术风格：复古电子游戏、动画片（中国水墨、美国皮克斯、日本宫崎骏）、漫画风</li>
-      </ul>
-    </li>
-    <li>
-      <a href="./index.html?p=7-work.md">我的工作</a>
+      <a href="./index.html?p=4-sculpture-craft.md">做手工</a>
       <ul>
+        <li>雕塑：水晶、陶瓷、米糕、植物</li>
+        <li>手工：挂毯、刺绣、娃娃、折纸、乐高</li>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=5-work.md">我工作</a>
+      <ul>
+        <li>各种职业</li>
         <li>美甲、食品、包装、家居、广告、公司徽标</li>
         <li>软件界面、演示图、图标、图书、海报、卡片、菜单</li>
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=8-art-classic.md">我的艺术</a>
-      <ul>  
+      <a href="./index.html?p=6-digital.md">数字艺术</a>
+      <ul>
+        <li>复古电子游戏</li>
+        <li>动画片（中国水墨、美国皮克斯、日本宫崎骏）、漫画风</li>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=8-art-classic.md">经典艺术</a>
+      <ul>
         <li>艺术风格：壁画、文艺复兴、印象派、中国画</li>
         <li>各种绘画工具比较：腾讯混元、DALL-E、Midjournery</li>
         <li>中国艺术家：林风眠、齐白石</li>
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=9-art-modern.md">我的现代艺术</a>
+      <a href="./index.html?p=9-art-modern.md">现代艺术</a>
       <ul>
-        <li>达达主义、野兽派、立体主义、墨西哥壁画、抽象几何、超现实主义、波普艺术、后现代末日、哥特奇幻、赛博朋克</li>
+        <li>达达主义、野兽派、立体主义、墨西哥壁画</li>
+        <li>抽象几何、超现实主义、波普艺术、后现代末日、哥特奇幻、赛博朋克</li>
       </ul>
     </li>
     <li>
@@ -108,6 +110,15 @@
       <ul>
         <li>内容：年代、类型、户外、工作室、时段（黄金时段、蓝色时段）</li>
         <li>技术：曝光（运动模糊）、镜头（鱼眼镜头）、景深、胶片（达盖尔照相法）</li>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=12-1-plot.md">我的故事</a>
+      <ul>
+        <li>创意写作：故事接龙、时光机、单词描述、科学之谜</li>
+        <li><a href="./index.html?p=12-3-case.md">AI 助手</a>：短剧脚本、短篇科幻、诗歌创作</li>
+        <li><a href="./index.html?p=13-1-story.md">故事设计</a>：主题、内容、标题、角色、人物形象、情节、结局</li>
+        <li><a href="./index.html?p=14-1-sound.md">配音配乐</a>：文字转语言，歌词演唱</li>
       </ul>
     </li>
   </ul>
