--- a/ai-solve/solve.html
+++ b/ai-solve/solve.html
@@ -57,7 +57,8 @@
         <li><a href="./index.html?p=1-3-case.md">成为专家</a></li>
         <ul>
           <li>生活专家：影视推荐、菜谱设计、营养建议、美食文案、医学报告解读</li>
-          <li>解决问题专家：问题分析、方案设计、报告写作</li>
+          <li>解决问题专家：问题分析、方案设计</li>
+          <li>周报、会议纪要写作</li>
         </ul>
       </ul>
     </li>
