--- a/ai-career/career.html
+++ b/ai-career/career.html
@@ -11,6 +11,10 @@
 
   <p>北京皮村同心友好空间，2024 年 3 月 - 6 月</p>
 
+  <img src="fig/qr-code/career.png" alt="二维码" width="150">
+  
+  <p>链接：<a href="https://yishuai.github.io/talk/ai-career/career.html">https://yishuai.github.io/talk/ai-career/career.html</a></p>
+
   <h2>简介</h2>
 
   <p>皮村同心友好空间是服务于打工人及其子女的空间。该空间为打工人及其子女提供了很好的社区支持空间，包括游乐、教育、创业。</p>
@@ -72,8 +76,8 @@
     <li>
       <a href="./index.html?p=6-1-product.md">产品设计</a>
       <ul>
-        <li>产品创意</li>
-        <li>说服立项</li>
+        <li>产品创意、说服立项</li>
+        <li>设计方案：课程、聚餐</li>
         <li><a href="./index.html?p=6-3-case.md">成为专家</a></li>
         <ul>
           <li>产品需求文档编写、价值功能分析</li>
@@ -87,7 +91,7 @@
         <li>活动创意</li>
         <li>营销策划、口号、文案</li>
         <li>客户维护、邮件写作</li>
-        <li><a href="./index.html?p=5-3-case.md">成为专家</a></li>
+        <li><a href="./index.html?p=7-3-case.md">成为专家</a></li>
         <ul>
           <li>营销策划、口号设计、新闻写作、爆款文案（小红书）</li>
           <li>公关文案质量评估</li>
@@ -96,7 +100,7 @@
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=8-1-write.md">公文写作</a>
+      <a href="./index.html?p=8-1-write.md">写作</a>
       <ul>
         <li>方法：提供范文、关键词、口吻、大纲、步骤</li>
         <li>改写：风格、对象、长度</li>
@@ -104,10 +108,16 @@
         <li><a href="./index.html?p=8-3-case.md">成为专家</a></li>
         <ul>
           <li>宣传材料、公文</li>
+          <li>编辑评分</li>
         </ul>
       </ul>
     </li>
-
+    <li>
+      <a href="./index.html?p=9-1-plan.md">计划</a>
+      <ul>
+        <li>营销活动计划、一天日程安排、旅行计划、学习里程碑规划</li>
+      </ul>
+    </li>
   </ul>
 
   <h2>项目</h2>
