--- a/ai-draw/draw.html
+++ b/ai-draw/draw.html
@@ -7,9 +7,14 @@
 
   <body>
 
-  <h1>基于 AI 绘画的美育通识</h1>
+  <h1>AI 帮我画</h1>
 
   <p>北京皮村同心友好空间，2024 年 3 月 - 6 月</p>
+
+  <img src="fig/qr-code/draw.png" alt="二维码" width="150">
+  
+  <p>链接：<a href="https://yishuai.github.io/talk/ai-draw/draw.html">https://yishuai.github.io/talk/ai-draw/draw.html</a></p>
+
 
   <h2>简介</h2>
 
@@ -116,7 +121,7 @@
       <a href="./index.html?p=12-1-plot.md">我的故事</a>
       <ul>
         <li>创意写作：故事接龙、时光机、单词描述、科学之谜</li>
-        <li><a href="./index.html?p=12-3-case.md">AI 助手</a>：短剧脚本、短篇科幻、诗歌创作</li>
+        <li><a href="./index.html?p=12-3-case.md">AI 助手</a>：短剧脚本、短篇科幻、诗歌创作、创意写作教练</li>
         <li><a href="./index.html?p=13-1-story.md">故事设计</a>：主题、内容、标题、角色、人物形象、情节、结局</li>
         <li><a href="./index.html?p=14-1-sound.md">配音配乐</a>：文字转语言，歌词演唱</li>
       </ul>
