--- a/ai-solve/solve.html
+++ b/ai-solve/solve.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AI 解难题</title>
+    <title>AI 帮我忙</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
   <body>
 
-  <h1>AI 解难题</h1>
+  <h1>AI 帮我忙</h1>
 
   <p>北京皮村同心友好空间，2024 年 3 月 - 6 月</p>
+
+  <img src="fig/qr-code/solve.png" alt="二维码" width="150">
+  
+  <p>链接：<a href="https://yishuai.github.io/talk/ai-solve/solve.html">https://yishuai.github.io/talk/ai-solve/solve.html</a></p>
 
   <h2>简介</h2>
 
@@ -91,6 +95,7 @@
   <h2>项目</h2>
   <ul>
     <li>同心社区休闲小花园设计项目：8 位妈妈，在人工智能助手的帮助下，完成需求分析、整理、多功能空间方案设计，强调舒适、放松、户外等特色，风格比较（地中海休闲风格、亚洲田园风格），说明地砖限制等。然后在人工智能的帮助下，形成会议记录、项目计划、分组讨论安排，最后，人工智能出效果图，讨论形成初步方案。<a href="https://kimi.moonshot.cn/share/com7qshkqq4h6lb1mjs0">Kimi 对话记录</a></li>
+    <li>孩子想出国留学，如何准备？请 AI 作为一位金牌咨询师，提供建议，设计详细方案，具体到天。<a href="https://tongyi.aliyun.com/qianwen/share?shareId=d4b09541-43e9-4d91-95e9-77310c692dce">通用千问对话记录</a></li>
   </ul>
 
   <h2>工具</h2>
