--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <li>
       <a href="./ai-career/career.html">AI 帮工作</a>，北京皮村同心友好空间，2024 年 6 月
     </li>
+    <li>
+      <a href="./ai-study/study.html">AI 帮我学</a>，北京皮村同心友好空间，2024 年 6 月
+    </li>
   </ul>
 
   <h1>中学</h1>
