--- a/ai-solve/solve.html
+++ b/ai-solve/solve.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AI 帮我忙</title>
+    <title>AI 出主意</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
   <body>
 
-  <h1>AI 帮我忙</h1>
+  <h1>AI 出主意</h1>
 
   <p>北京皮村同心友好空间，2024 年 3 月 - 6 月</p>
 
