--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <a href="./ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月
     </li>
     <li>
-      <a href="./ai-solve/solve.html">AI 解难题</a>，北京皮村同心友好空间，2024 年 5 月
+      <a href="./ai-solve/solve.html">AI 出主意</a>，北京皮村同心友好空间，2024 年 5 月
     </li>
     <li>
       <a href="./ai-career/career.html">AI 帮工作</a>，北京皮村同心友好空间，2024 年 6 月
     </li>
     <li>
-      <a href="./ai-study/study.html">AI 帮我学</a>，北京皮村同心友好空间，2024 年 6 月
+      <a href="./ai-study/study.html">AI 助我学</a>，北京皮村同心友好空间，2024 年 6 月
     </li>
   </ul>
 
