--- a/ai-study/study.html
+++ b/ai-study/study.html
@@ -23,7 +23,7 @@
 
   <h2>目标与方法</h2>
 
-  <p>通过 AI 绘画，孩子们能够：
+  <p>通过和 AI 交互，孩子们能够：
   <ul>
     <li>发现自己</li>
     <li>认识世界</li>
@@ -70,11 +70,12 @@
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=4-sel.md">理解和管理情绪</a>
+      <a href="./index.html?p=4-self.md">自我意识</a>
       <ul>
+        <li>理解和管理情绪</li>
         <li>个性：开放、尽责、外向、宜人、神经质</li>
         <li>认知重构：识别消极、不正确的思维方式，走出不安</li>
-        <li>情绪反思</li>
+        <li>情绪反思：孩子、妈妈</li>
       </ul>
     </li>
     <li>
@@ -86,30 +87,36 @@
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=7-premortem.md">事前剖析</a>
+      <a href="./index.html?p=6-premortem.md">事前剖析</a>
       <ul>
-        <li>事前剖析，魔鬼代言人</li>
+        <li>魔鬼代言人</li>
         <li>查理芒格：知道你会死在哪里</li>
         <li>唱反调的队友：有没有另外的方法？</li>
         <li>事前风险剖析和失败避免：事前诸葛亮</li>
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=6-1-reflection.md">反思复盘</a>
+      <a href="./index.html?p=7-1-reflection.md">反思复盘</a>
       <ul>
-        <li>复盘：反思经历、获得经验</li>
-        <li>设计反思问题：课程反思、日记反思（情绪、经历、活动）</li>
-        <li>结合实际，询问建议、解释、示例，帮助反思</li>
-        <li><a href="./index.html?p=6-3-case.md">成为专家</a>：考试复盘、反思经历、反思团队经历</li>
+        <li>反思经历、获得经验</li>
+        <li>设计反思问题：课程反思</li> 
+        <li>日记反思：情绪、经历、活动</li>
+        <li>跟进：询问建议、解释、示例，帮助改进</li>
+        <li><a href="./index.html?p=7-3-case.md">成为专家</a></li>
+        <ul>
+          <li>考试复盘：困难、反思课上、课下、练习、和同学讨论）、建议</li>
+          <li>反思个人经历：反思练习</li>
+          <li>反思团队经历：回顾、反思、举例、开放讨论、困难和疑惑</li>
+        </ul>
       </ul>
     </li>
     <li>
       <a href="./index.html?p=8-social.md">社会意识</a>
       <ul>
+        <li>同理心：理解并共感他人感受、情感和处境</li>
         <li>社会意识、关系技巧、负责任的决策</li>
-        <li>同理心：理解并共感他人感受、情感和处境的能力</li>
-        <li>举例：大学生活中的同理心（宿舍、学术讨论、团队合作）</li>
-        <li>举例：PUA 抬杠 vs 同理心</li>
+        <li>同学之间的同理心：宿舍、学术讨论、团队合作</li>
+        <li>PUA 抬杠 vs 同理心</li>
       </ul>
     </li>
     <li>
@@ -118,8 +125,8 @@
         <li>悖论心态：一种思维模式</li>
         <li>认识、理解、接受：存在看似相互矛盾的概念、信念或价值观</li>
         <li>接受生活中存在的矛盾和复杂性，不简化事物为单一的解释</li>
-        <li>讨论话题：一般、儿童、大学生</li>
-        <li>理解和尊重不同社会观点</li>
+        <li>悖论心态的培养话题：一般、儿童、大学生</li>
+        <li>理解和尊重不同社会观点：课堂活动，设计案例</li>
       </ul>
     </li>
   </ul>
