--- a/ai-study/study.html
+++ b/ai-study/study.html
@@ -92,7 +92,7 @@
         <li>魔鬼代言人</li>
         <li>查理芒格：知道你会死在哪里</li>
         <li>唱反调的队友：有没有另外的方法？</li>
-        <li>事前风险剖析和失败避免：事前诸葛亮</li>
+        <li>团队事前风险剖析和失败避免：事前诸葛亮</li>
       </ul>
     </li>
     <li>
@@ -107,6 +107,7 @@
           <li>考试复盘：困难、反思课上、课下、练习、和同学讨论）、建议</li>
           <li>反思个人经历：反思练习</li>
           <li>反思团队经历：回顾、反思、举例、开放讨论、困难和疑惑</li>
+          <li>团队行动后反思：发生了什么，为什么会发生，改进</li>
         </ul>
       </ul>
     </li>
@@ -127,6 +128,28 @@
         <li>接受生活中存在的矛盾和复杂性，不简化事物为单一的解释</li>
         <li>悖论心态的培养话题：一般、儿童、大学生</li>
         <li>理解和尊重不同社会观点：课堂活动，设计案例</li>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=10-1-team.md">团队合作</a>
+      <ul>
+        <li>团队成员互相了解</li>
+        <li>制定团队章程：目标、角色、行为规范</li>
+        <li><a href="./index.html?p=10-3-case.md">成为专家</a>：团队合作模拟仿真</li>
+        <ul>
+          <li>AI 模拟现实团队合作场景，演示合作解决问题</li>
+          <li>产品设计的甲方和乙方：反馈和修改</li>
+          <li>两位意见分歧的杂志编辑：主编协调</li>
+          <li>两位科学家解决分歧：妥协、实验、研究、基于证据、咨询、讨论</li>
+        </ul>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=11-role-play.md">角色扮演</a>
+      <ul>
+        <li>足球队长和队员之间的冲突解决</li>
+        <li>为教师创建特定主题的角色扮演模拟，如谈判、招聘、推销</li>
+        <li>设计并进行模拟：谈判策略、技巧</li>
       </ul>
     </li>
   </ul>
