--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <a href="./ai-career/career.html">AI 帮工作</a>，北京皮村同心友好空间，2024 年 6 月
     </li>
     <li>
-      <a href="./ai-study/study.html">AI 助我学</a>，北京皮村同心友好空间，2024 年 6 月
+      <a href="./ai-study/study.html">AI 助我学</a>，北京皮村同心友好空间，2024 年 7 月
+    </li>
+    <li>
+      <a href="./ai-self/self.html">AI 助我立</a>，北京皮村同心友好空间，2024 年 8 月
     </li>
   </ul>
 
