--- a/ai-career/career.html
+++ b/ai-career/career.html
@@ -109,6 +109,7 @@
         <ul>
           <li>宣传材料、公文</li>
           <li>编辑评分</li>
+          <li>解决方案、周报、会议纪要</li>
         </ul>
       </ul>
     </li>
