--- a/ai-self/self.html
+++ b/ai-self/self.html
@@ -123,6 +123,16 @@
         <li>设计并进行模拟：谈判策略、技巧</li>
       </ul>
     </li>
+    <li>
+      <a href="./index.html?p=12-socratic.md">独立思考</a>
+      <ul>
+        <li>苏格拉底方法</li>
+        <li>提问和引导：鼓励质疑、评估证据、考虑替代观点、独立发现答案</li>
+        <li>开放、尊重、倾听</li>
+        <li>成长心态</li>
+      </ul>
+    </li>
+
   </ul>
 
 </body>
