--- a/ai-study/study.html
+++ b/ai-study/study.html
@@ -67,7 +67,75 @@
         <li>文章阅读助手：内容总结、观点提炼、数据和逻辑的批判性分析</li>
       </ul>
     </li>
+    <li>
+      <a href="./index.html?p=5-1-explain.md">帮解释</a>
+      <ul>
+        <li>定义、示例、信息图</li>
+        <li>与真实世界链接：有趣的科学事实或故事</li>
+        <li>创建活动、教程、课程计划、仿真</li>
+        <li><a href="./index.html?p=5-3-case.md">成为专家</a></li>
+        <ul>
+          <li>基本解释：示例、类比</li>
+          <li>帮助教师生成解释 AI：了解学生情况、易犯错误、关键点，生成有吸引力的开头、示例、图表、从简单到复杂的解释</li>
+          <li>解释来龙去脉：起源、应用、内容、不足、发展</li>
+          <li>费曼风格解释：科学、逻辑、简洁</li>
+          <li>形象化的解释</li>
+        </ul>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=6-1-tutor.md">帮辅导</a>
+      <ul>
+        <li>辅导的本质：互动，帮助学生主动知识构建</li>
+        <li>辅导中的老师：提问、提示、纠正、建议、合作解决问题</li>
+        <li>辅导中的学生：积极解决问题、主动构建知识</li>
+        <li>可汗学院的 Khanmigo</li>
+        <li><a href="./index.html?p=6-3-case.md">成为专家</a></li>
+        <ul>
+          <li>提问式辅导</li>
+          <li>通用概念辅导：了解学生情况、解释，让学生提问、提问学生、确认理解</li>
+          <li>设计 AI 导师：目标、任务、学生情况、约束、测试、资源推荐、作业布置</li>
+          <li>作业辅导</li>
+        </ul>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=7-practise.md">陪我练</a>
+      <ul>
+        <li>练习的作用</li>
+        <li>提供练习：快速练习、游戏式系列练习</li>
+        <li>在线模拟和虚拟实验</li>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=9-1-feedback.md">给反馈</a>
+      <ul>
+        <li>持续的、量身定制的反馈很重要</li>
+        <li>组成：目标、反馈、计划和调整</li>
+        <li>有效的反馈：及时、平衡、可操作、目标导向、个性化</li>
+        <li>示例：关于写作的反馈</li>
+        <li><a href="./index.html?p=9-3-case.md">成为专家</a></li>
+        <ul>
+          <li>目标反馈：询问目标、学生情况，然后反馈，要求修订，并就修订继续反馈</li>
+          <li>打分反馈：根据打分标准进行反馈</li>
+          <li>多个 AI 合作提供反馈：风险投资 Pitch</li>
+          <li></li>
+        </ul>
+      </ul>
+    </li>
   </ul>
+
+  <h2>参考材料</h2>
+
+  <ul>
+    <li>Ethan Mollick, One Useful Thing, Trying to understand the implications of AI for work, education, and life. <a href="https://www.oneusefulthing.org/">Website</a></li>
+    <li>Ethan Mollick, More Useful Things: AI Resources, Book, Prompt Library, <a href="https://www.moreusefulthings.com/">Website</a></li>
+    <li> Ethan Mollick, Lilach Mollick, Assigning Ai: Seven Approaches For Students With Prompts, Wharton School, June 11, 2023, <a href="https://arxiv.org/pdf/2306.10052.pdf">Arxiv PDF</a></li>
+    <li></li>
+  </ul>
+  
+  
+
 
 </body>
 </html>
