--- a/ai-study/study.html
+++ b/ai-study/study.html
@@ -130,7 +130,8 @@
   <ul>
     <li>Ethan Mollick, One Useful Thing, Trying to understand the implications of AI for work, education, and life. <a href="https://www.oneusefulthing.org/">Website</a></li>
     <li>Ethan Mollick, More Useful Things: AI Resources, Book, Prompt Library, <a href="https://www.moreusefulthings.com/">Website</a></li>
-    <li> Ethan Mollick, Lilach Mollick, Assigning Ai: Seven Approaches For Students With Prompts, Wharton School, June 11, 2023, <a href="https://arxiv.org/pdf/2306.10052.pdf">Arxiv PDF</a></li>
+    <li>Ethan Mollick, Lilach Mollick, Assigning Ai: Seven Approaches For Students With Prompts, Wharton School, June 11, 2023, <a href="https://arxiv.org/pdf/2306.10052.pdf">Arxiv PDF</a></li>
+    <li>兰勇等，用生成式人工智能激活学习——国外生成式人工智能教学案例解读，中小学信息技术教育 2024-03-04 <a href="https://mp.weixin.qq.com/s/rMRbP0l9aing12CbAVFcBg">微信公众号</a></li>
     <li></li>
   </ul>
   
