--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
 
-  <h1>小学</h1>
+  <h1>AI 系列应用方法</h1>
   <ul>
     <li>
       <a href="./ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月
@@ -27,8 +27,10 @@
   </ul>
 
   <h1>中学</h1>
-
     <ul>
+      <li>
+        <a href="./ai-camp/camp.html">AI 智能及其算法初探</a>，北京四中高一15班，2024 年 6 月
+      </li>
       <li>
         <a href="./fcc/fcc.html">学习编程和编程教学，如何更高效更有趣</a>，FCC分享，2020 年 5 月
       </li>
@@ -44,7 +46,6 @@
     </ul>
 
   <h1>大学</h1>
-
   <ul>
     <li>
       <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈会，2022 年 6 月
