--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
 
-  <h1>AI 系列应用方法</h1>
+  <h1>AI 应用方法</h1>
   <ul>
     <li>
       <a href="./ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月
@@ -29,32 +29,32 @@
   <h1>中学</h1>
     <ul>
       <li>
-        <a href="./ai-camp/camp.html">AI 智能及其算法初探</a>，北京四中高一15班，2024 年 6 月
+        <a href="./ai-camp/camp.html">走进 AI 的世界</a>，北京四中高一15班，2024 年 6 月
       </li>
       <li>
-        <a href="./fcc/fcc.html">学习编程和编程教学，如何更高效更有趣</a>，FCC分享，2020 年 5 月
-      </li>
-      <li>
-        <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会分享，2021 年 1 月
-      </li>
-      <li>
-        <a href="./shiwu/index.html?p=lec3.md">永远也不要停下来</a>，实务学堂白露营寄语赠言，2023 年 12 月
+        <a href="./shiwu/index.html?p=lec3.md">永远也不要停下来</a>，实务学堂白露营，2023 年 12 月
       </li>
       <li>
         <a href="./fallacy/index.html?p=fallacy.md">逻辑谬误</a>，交大附中，2023 年 5 月
+      </li>
+      <li>
+        <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会，2021 年 1 月
+      </li>
+      <li>
+        <a href="./fcc/fcc.html">学习编程和编程教学，如何更高效更有趣</a>，FCC，2020 年 5 月
       </li>
     </ul>
 
   <h1>大学</h1>
   <ul>
     <li>
-      <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈会，2022 年 6 月
-    </li>
-    <li>
-      <a href="./teach/index.html?p=learn.md">找到自己的绝活</a>，研究生入学座谈会，2022 年 9 月
-    </li>
-    <li>
       <a href="https://www.bilibili.com/video/BV1jM4y1j7Ja/">勇于求知</a>，研究生招生宣讲，2023 年 7 月
+    </li>
+    <li>
+      <a href="./teach/index.html?p=learn.md">找到自己的绝活</a>，研究生入学座谈，2022 年 9 月
+    </li>
+    <li>
+      <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈，2022 年 6 月
     </li>
   </ul>
 
