--- a/ai-camp/camp.html
+++ b/ai-camp/camp.html
@@ -256,7 +256,24 @@
   </ul>
   </p>
 
-  <h3>第四部分：AI 技术原理</h3>
+  <h3>第四部分：AI 地球生态预测</h3>
+
+  <p>AI 可以对我们所处的世界进行预测，帮助我们应对天气变化，保护我们赖以生存的环境、气候，避免流浪地球</p>
+
+  <p>
+    <ul>
+      <li>基于 AI 的地球生态环境预测（<a href="https://earth.nullschool.net/">网页</a>）</li>
+      <ul>
+       <li>全球天气状况的可视化，由超级计算机预测，每三个小时更新一次</li>
+       <li>海洋表面电流估计值，每五天更新一次</li>
+       <li>海洋表面温度和日平均值异常（1981-2011），每日更新</li>
+       <li>海浪，每三小时更新一次</li>
+       <li>极光，每三十分钟更新一次</li>
+      </ul>
+    </ul>
+  </p>
+
+  <h3>第五部分：AI 技术原理</h3>
 
   <p>本部分包括四所国内外大学的课程，欢迎大家进行学习和探索
   <ul>
