--- a/ai-self/self.html
+++ b/ai-self/self.html
@@ -135,5 +135,10 @@
 
   </ul>
 
+  <p>参考文献：
+    <ul>
+      <li>Bybryan Lindenberger，What Are 5 Components of Emotional Intelligence & How Do They Shape Your Future? Success，2023 年 9 月，<a href="https://www.success.com/components-of-emotional-intelligence/">网页</a></li>
+    </ul>
+  </p>
 </body>
 </html>
