--- a/ai-career/career.html
+++ b/ai-career/career.html
@@ -131,5 +131,13 @@
     <li>热心网友，提示词图书馆，<a href="
       https://vxc3hj17dym.feishu.cn/wiki/VDb1wMKDNiNj0mkJn6VcFgRenVc">飞书文档</a></li>
   </ul>
-  </body>
+
+  <h2>Vanderbilt 大学 Coursera 课程</h2>
+  <ul>
+    <li>Microsoft 365 Copilot: Personal Productivity for All，<a href="https://www.coursera.org/learn/microsoft-365-copilot">课程网页</a>，帮助工作</li>
+    <li>面向领导者的生成式人工智能，<a href="https://www.coursera.org/learn/generative-ai-for-leaders">课程网页</a>，让 AI 成为你的助手、私人智囊团</li>
+    <li>Change Management for Generative AI，<a href="https://www.coursera.org/learn/change-management-generative-ai">课程网页</a>，AI 给工作、职业带来的改变</li>
+  </ul>
+
+</body>
 </html>
