--- a/ai-draw/draw.html
+++ b/ai-draw/draw.html
@@ -15,7 +15,6 @@
   
   <p>链接：<a href="https://yishuai.github.io/talk/ai-draw/draw.html">https://yishuai.github.io/talk/ai-draw/draw.html</a></p>
 
-
   <h2>简介</h2>
 
   <p>皮村同心友好空间是服务于打工人及其子女的空间。该空间为打工人及其子女提供了很好的社区支持空间，包括游乐、教育、创业。</p>
@@ -83,7 +82,7 @@
     <li>
       <a href="./index.html?p=5-work.md">我工作</a>
       <ul>
-        <li>各种职业</li>
+        <li>我理想的职业、<a href="../ai-self/self.html">自我管理</a></li>
         <li>美甲、食品、包装、家居、广告、公司徽标</li>
         <li>软件界面、演示图、图标、图书、海报、卡片、菜单</li>
       </ul>
@@ -118,8 +117,9 @@
       </ul>
     </li>
     <li>
-      <a href="./index.html?p=12-1-plot.md">我的故事</a>
+      <a href="./index.html?p=12-1-creative.md">我的故事</a>
       <ul>
+        <li><a href="./index.html?p=12-2-story.md">故事写作</a>：主题、内容、标题、角色、情节、结局</li>
         <li>创意写作：故事接龙、时光机、单词描述、科学之谜</li>
         <li><a href="./index.html?p=12-3-case.md">AI 助手</a>：短剧脚本、短篇科幻、诗歌创作、创意写作教练</li>
         <li><a href="./index.html?p=13-1-story.md">故事设计</a>：主题、内容、标题、角色、人物形象、情节、结局</li>
@@ -161,9 +161,21 @@
     <li>视频：剪映、腾讯智影、即创 AI</li> 
   </ul>
 
+  <h2>Coursera 课程</h2>
+  <ul>
+    <li>Vanderbilt 大学，GPT Vision：通过生成式人工智能看世界，<a href="https://www.coursera.org/learn/gpt-vision">课程网页</a>，拍摄照片，生成食谱、购物清单、DIY 制作计划、社交媒体帖子的描述、笔记、邮件等</li>
+    <li>Vanderbilt 大学，ChatGPT 高级数据分析，<a href="https://www.coursera.org/learn/chatgpt-advanced-data-analysis">课程网页</a>，使用 Code Interpreter 自动执行工作和生活中的任务，阅读和创建 PDF、PowerPoint、Excel、图像、视频等文件</li>
+    <li>初学者的 ChatGPT：与达尔易一起科幻写作，<a href="https://www.coursera.org/projects/chatgpt-dall-e-scifi-writing">课程网页</a></li>
+  </ul>
+
   <h2>记录</h2>
   <ul>
     <li>当童心遇上AI艺术 | 人工智能系列课程第一课——AI绘画体验，同心儿童友好空间未来学习中心，2024-04-11，<a href="https://mp.weixin.qq.com/s/AAJ2ysi3RNObU2bhZu-Nnw">微信公众号</a>  </li>
+  </ul>
+
+  <h2>研究</h2>
+  <ul>
+    <li>PSU，Rebecca Jane Passonneau 教授，人工智能写作反馈和评估，<a href="https://sites.psu.edu/becky/publications/">论文</a>， <a href="https://www.nlplab.psu.edu/colloquium/">NLP Colloquium</a></li>
   </ul>
   
 </body>
