--- a/ai-solve/solve.html
+++ b/ai-solve/solve.html
@@ -103,5 +103,21 @@
     <li>热心网友，提示词图书馆，<a href="
       https://vxc3hj17dym.feishu.cn/wiki/VDb1wMKDNiNj0mkJn6VcFgRenVc">飞书文档</a></li>
   </ul>
+
+  <h2>Vanderbilt 大学 Coursera 课程</h2>
+  <ul>
+    <li>生成式人工智能入门，<a href="https://www.coursera.org/learn/generative-ai">课程网页</a>，使用人工智能增强创造力和批判性思维</li>
+    <li>ChatGPT 应用提示工程，<a href="https://www.coursera.org/learn/prompt-engineering">课程网页</a>，非常好的课程，各种高级提示方法</li>
+    <li>可信的生成式人工智能，<a href="https://www.coursera.org/learn/trustworthy-generative-ai">课程网页</a>，利用提示工程技术生成更可靠的输出结果 - 掌握验证和确认输出结果的方法</li>
+    <li>OpenAI GPTs: Creating Your Own Custom AI Assistants，<a href="https://www.coursera.org/learn/openai-custom-gpts">课程网页</a>，专业地开发一款智能体</li>
+  </ul>
+
+  <h2>IBM 课程</h2>
+    <ul>
+    <li>生成式人工智能：介绍与应用，<a href="https://www.coursera.org/learn/generative-ai-introduction-and-applications">课程网页</a></li>
+    <li>生成式人工智能：提示工程基础知识，<a href="https://www.coursera.org/learn/generative-ai-prompt-engineering-for-everyone">课程网页</a></li>
+    <li>生成式人工智能基础 专项课程，<a href="https://www.coursera.org/specializations/generative-ai-for-everyone">课程网页</a></li>
+  </ul>
+
   </body>
 </html>
