--- a/ai-study/study.html
+++ b/ai-study/study.html
@@ -125,14 +125,20 @@
     </li>
   </ul>
 
-  <h2>参考材料</h2>
+  <h2>Vanderbilt 大学 Coursera 课程</h2>
+  <ul>
+    <li>使用 ChatGPT 进行创新教学，<a href="https://www.coursera.org/learn/chatgpt-innovative-teaching">课程网页</a>，支持创新教学和个性化教育</li>
+    <li>Generative AI for University Leaders，<a href="https://www.coursera.org/learn/gen-ai-for-university-leaders">课程网页</a>，大学管理者</li>
+  </ul>
 
+  <h2>参考材料</h2>
   <ul>
     <li>Ethan Mollick, One Useful Thing, Trying to understand the implications of AI for work, education, and life. <a href="https://www.oneusefulthing.org/">Website</a></li>
     <li>Ethan Mollick, More Useful Things: AI Resources, Book, Prompt Library, <a href="https://www.moreusefulthings.com/">Website</a></li>
     <li>Ethan Mollick, Lilach Mollick, Assigning Ai: Seven Approaches For Students With Prompts, Wharton School, June 11, 2023, <a href="https://arxiv.org/pdf/2306.10052.pdf">Arxiv PDF</a></li>
     <li>兰勇等，用生成式人工智能激活学习——国外生成式人工智能教学案例解读，中小学信息技术教育 2024-03-04 <a href="https://mp.weixin.qq.com/s/rMRbP0l9aing12CbAVFcBg">微信公众号</a></li>
-    <li></li>
+    <li>Eduaide.Ai，人工智能驱动的平台，帮助教育工作者创建课程计划、教学资源和评估，<a href="https://www.eduaide.ai/">网站</a></li>
+    <li>Kristen DiCerbo, Khan 学习科学负责人，<a href="https://blog.khanacademy.org/?s=DiCerbo&s=DiCerbo&s=DiCerbo">Khan 博客系列</a>，<a href="https://www.kristendicerbo.com/around-the-web">博客和媒体</a>，<a href="https://www.kristendicerbo.com/videos">视频</a>，<a href="https://www.kristendicerbo.com/academic-publications">论文</a>，自动评估，Khanmigo</li>
   </ul>
   
   
