--- a/ai-career/career.html
+++ b/ai-career/career.html
@@ -116,7 +116,7 @@
     <li>
       <a href="./index.html?p=9-1-plan.md">计划</a>
       <ul>
-        <li>营销活动计划、一天日程安排、旅行计划、学习里程碑规划</li>
+        <li>营销活动计划、一天日程安排、旅行计划</li>
       </ul>
     </li>
   </ul>
