--- a/ai-self/self.html
+++ b/ai-self/self.html
@@ -54,7 +54,7 @@
       <ul>
         <li>规划/目标设定、记录进展、复盘、调整和反思</li>
         <li>习惯养成：做笔记、做作业</li>
-        <li>计划：考试周、详细到小时的学习计划，论文写作计划</li>
+        <li>计划：学习里程碑规划，考试周、详细到小时的学习计划，论文写作计划</li>
       </ul>
     </li>
     <li>
@@ -80,6 +80,15 @@
           <li>反思团队经历：回顾、反思、举例、开放讨论、困难和疑惑</li>
           <li>团队行动后反思：发生了什么，为什么会发生，改进</li>
         </ul>
+      </ul>
+    </li>
+    <li>
+      <a href="./index.html?p=12-socratic.md">独立思考</a>
+      <ul>
+        <li>苏格拉底方法</li>
+        <li>提问和引导：鼓励质疑、评估证据、考虑替代观点、独立发现答案</li>
+        <li>开放、尊重、倾听</li>
+        <li>成长心态</li>
       </ul>
     </li>
     <li>
@@ -123,20 +132,24 @@
         <li>设计并进行模拟：谈判策略、技巧</li>
       </ul>
     </li>
-    <li>
-      <a href="./index.html?p=12-socratic.md">独立思考</a>
-      <ul>
-        <li>苏格拉底方法</li>
-        <li>提问和引导：鼓励质疑、评估证据、考虑替代观点、独立发现答案</li>
-        <li>开放、尊重、倾听</li>
-        <li>成长心态</li>
-      </ul>
-    </li>
 
   </ul>
 
   <p>参考文献：
     <ul>
+      <li>C 计划</li>
+      <ul>
+        <li>为什么要学批判性思维？为什么要选C计划？2023-08-25 <a href="https://mp.weixin.qq.com/s/PNiYsU5tAPUhhlI1WskmGQ">链接</a></li>
+        <li>蓝方，理性的公民与完整的人，2024-07-02，<a href="https://mp.weixin.qq.com/s/THQ73zo1sr0rEFKloIq4uQ">链接</a></li>
+      </ul>
+      <li>实务学堂</li>
+      <ul>
+        <li>实务学堂青少年职前训练营招募，2024-06-03，<a href="https://mp.weixin.qq.com/s/xbcqt4Tlr_ALa_P_-Lv7nQ">链接</a></li>
+        <li>营员故事｜从“社恐”到“金牌销售预备役”，2024-03-08，<a href="https://mp.weixin.qq.com/s/QFx2GnNquuCvEfOjJ0gWLg">链接</a></li>
+        <li>在苟且与天命之间，还有广阔的“折腾”空间，2024-03-20，<a href="https://mp.weixin.qq.com/s/1m29vuT_uyMFTcpAlh5zAA">链接</a></li>
+        <li>就业难？实务学堂陪你找方向、找工作，学本事、早自立，2024-02-04，<a href="https://mp.weixin.qq.com/s/hIsL2D5_EO9AiDbl-qjNpw">链接</a>
+        </li>
+      </ul>
       <li>Bybryan Lindenberger，What Are 5 Components of Emotional Intelligence & How Do They Shape Your Future? Success，2023 年 9 月，<a href="https://www.success.com/components-of-emotional-intelligence/">网页</a></li>
     </ul>
   </p>
