--- a/ai-study/study.html
+++ b/ai-study/study.html
@@ -39,16 +39,11 @@
 
   <ul>
     <li>
-      <a href="./index.html?p=1-basic.md">AI 魔法学校</a>
+      <a href="../ai-self/index.html?p=5-regulation.md">做计划</a>
       <ul>
-        <li>对话机器人：学习辅导、大学、职业顾问、辩论伙伴、角色扮演</li>
-        <li>内容：信息文本、学术内容</li>
-        <li>创意：书籍、歌曲、小品、说唱、笑话</li>
-        <li>想法：研究助理、扩展想法、句子开头、示例、真实世界连接</li>
-        <li>学习：计划、测验、语言学习</li>
-        <li>支持：翻译、总结、步骤、解释、概念理解、社交故事</li>
-        <li>STEM：编程、数学分析、数据收集</li>
-        <li>写作：反馈、修辞、校对、重写、邮件、便条</li>
+        <li>规划/目标设定、记录进展、复盘、调整和反思</li>
+        <li>习惯养成：做笔记、做作业</li>
+        <li>计划：学习里程碑规划，考试周、详细到小时的学习计划，论文写作计划</li>
       </ul>
     </li>
     <li>
@@ -89,7 +84,6 @@
         <li>辅导的本质：互动，帮助学生主动知识构建</li>
         <li>辅导中的老师：提问、提示、纠正、建议、合作解决问题</li>
         <li>辅导中的学生：积极解决问题、主动构建知识</li>
-        <li>可汗学院的 Khanmigo</li>
         <li><a href="./index.html?p=6-3-case.md">成为专家</a></li>
         <ul>
           <li>提问式辅导</li>
@@ -119,16 +113,30 @@
           <li>目标反馈：询问目标、学生情况，然后反馈，要求修订，并就修订继续反馈</li>
           <li>打分反馈：根据打分标准进行反馈</li>
           <li>多个 AI 合作提供反馈：风险投资 Pitch</li>
-          <li></li>
         </ul>
       </ul>
     </li>
   </ul>
 
-  <h2>Vanderbilt 大学 Coursera 课程</h2>
+  <h2>工具</h2>
+
   <ul>
-    <li>使用 ChatGPT 进行创新教学，<a href="https://www.coursera.org/learn/chatgpt-innovative-teaching">课程网页</a>，支持创新教学和个性化教育</li>
-    <li>Generative AI for University Leaders，<a href="https://www.coursera.org/learn/gen-ai-for-university-leaders">课程网页</a>，大学管理者</li>
+    <li>考试复盘助手（<a href="https://m.tongyi.aliyun.com/app/tongyi/tongyi-hybrid/share-result?shareId=06b8825a-dda2-4fa6-9e3d-17c7ac7acf75">阿里通义 APP 链接</a>，<a href="https://t.aliyun.com/U/EPrcEG">阿里通义网页</a>）。</li>
+    <li>一起探索吧（<a href="https://m.tongyi.aliyun.com/app/tongyi/tongyi-hybrid/share-result?shareId=19913999-ec8f-4e7e-a996-d4921734d61b">阿里通义 APP 链接</a>），非常耐心的导师（<a href="https://t.aliyun.com/U/IVBzdb">阿里通义网页</a>）。</li>
+    <li>可汗学院的 Khanmigo ChatGPT Tools：<a href="https://chatgpt.com/g/g-hRCqiqVlM-tutor-me">ChatGPT 链接</a></li>
+    <li>
+      <a href="./index.html?p=1-basic.md">AI 魔法学校</a>
+      <ul>
+        <li>对话机器人：学习辅导、大学、职业顾问、辩论伙伴、角色扮演</li>
+        <li>内容：信息文本、学术内容</li>
+        <li>创意：书籍、歌曲、小品、说唱、笑话</li>
+        <li>想法：研究助理、扩展想法、句子开头、示例、真实世界连接</li>
+        <li>学习：计划、测验、语言学习</li>
+        <li>支持：翻译、总结、步骤、解释、概念理解、社交故事</li>
+        <li>STEM：编程、数学分析、数据收集</li>
+        <li>写作：反馈、修辞、校对、重写、邮件、便条</li>
+      </ul>
+    </li>
   </ul>
 
   <h2>参考材料</h2>
@@ -139,10 +147,12 @@
     <li>兰勇等，用生成式人工智能激活学习——国外生成式人工智能教学案例解读，中小学信息技术教育 2024-03-04 <a href="https://mp.weixin.qq.com/s/rMRbP0l9aing12CbAVFcBg">微信公众号</a></li>
     <li>Eduaide.Ai，人工智能驱动的平台，帮助教育工作者创建课程计划、教学资源和评估，<a href="https://www.eduaide.ai/">网站</a></li>
     <li>Kristen DiCerbo, Khan 学习科学负责人，<a href="https://blog.khanacademy.org/?s=DiCerbo&s=DiCerbo&s=DiCerbo">Khan 博客系列</a>，<a href="https://www.kristendicerbo.com/around-the-web">博客和媒体</a>，<a href="https://www.kristendicerbo.com/videos">视频</a>，<a href="https://www.kristendicerbo.com/academic-publications">论文</a>，自动评估，Khanmigo</li>
+    <li>Vanderbilt 大学 Coursera 课程</li>
+    <ul>
+      <li>使用 ChatGPT 进行创新教学，<a href="https://www.coursera.org/learn/chatgpt-innovative-teaching">课程网页</a>，支持创新教学和个性化教育</li>
+      <li>Generative AI for University Leaders，<a href="https://www.coursera.org/learn/gen-ai-for-university-leaders">课程网页</a>，大学管理者</li>
+    </ul>
   </ul>
   
-  
-
-
 </body>
 </html>
