--- a/index.html
+++ b/index.html
@@ -1,62 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>交流</title>
+    <title>AI</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
   <body>
 
-  <h1>AI 应用方法</h1>
+  <h1> AI 应用讲座</h1>
   <ul>
-    <li>
-      <a href="./ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月
-    </li>
-    <li>
-      <a href="./ai-solve/solve.html">AI 出主意</a>，北京皮村同心友好空间，2024 年 5 月
-    </li>
-    <li>
-      <a href="./ai-career/career.html">AI 帮工作</a>，北京皮村同心友好空间，2024 年 6 月
-    </li>
-    <li>
-      <a href="./ai-study/study.html">AI 助我学</a>，北京皮村同心友好空间，2024 年 7 月
-    </li>
-    <li>
-      <a href="./ai-self/self.html">AI 助我立</a>，北京皮村同心友好空间，2024 年 8 月
-    </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-draw/draw.html">AI 帮我画</a>，北京皮村同心友好空间，2024 年 3 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-solve/solve.html">AI 出主意</a>，北京皮村同心友好空间，2024 年 5 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-career/career.html">AI 帮工作</a>，北京皮村同心友好空间，2024 年 6 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-study/study.html">AI 助我学</a>，北京皮村同心友好空间，2024 年 7 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-self/self.html">AI 助我立</a>，北京皮村同心友好空间，2024 年 8 月 </li>
+    <li> <a href="https://yishuai.github.io/talk/ai-camp/camp.html">AI 智能和算法初探</a>，北京四中高一15班，2024 年 6 月 </li>
   </ul>
 
-  <h1>中学</h1>
-    <ul>
-      <li>
-        <a href="./ai-camp/camp.html">走进 AI 的世界</a>，北京四中高一15班，2024 年 6 月
-      </li>
-      <li>
-        <a href="./shiwu/index.html?p=lec3.md">永远也不要停下来</a>，实务学堂白露营，2023 年 12 月
-      </li>
-      <li>
-        <a href="./fallacy/index.html?p=fallacy.md">逻辑谬误</a>，交大附中，2023 年 5 月
-      </li>
-      <li>
-        <a href="./shiwu/shiwu.html">爱、一起、学习</a>，实务学堂年会，2021 年 1 月
-      </li>
-      <li>
-        <a href="./fcc/fcc.html">学习编程和编程教学，如何更高效更有趣</a>，FCC，2020 年 5 月
-      </li>
+  <h1> AI 技术讲座</h1>
+  <ul>
+    <li> <a href="https://bjtu-netcomm.github.io/ai/ai.html"> 中文版</a>，<a href="https://bjtu-netcomm.github.io/ai/aien.html"> 英文版</a>，<a href="https://space.bilibili.com/88039759/channel/collectiondetail?sid=415701">B站视频</a>，2022 年</li>
+    <li> <a href="https://yishuai.github.io/cavideo/trans.html">人工智能技术的应用与创新</a>，国家铁路技术管理人才培训班，2020 年 </li>
+    <li> <a href="https://yishuai.github.io/cavideo/index.html" >人工智能和云计算在视频监控中的应用</a >，国家铁路综合视频监控管理培训班，2020 年 </li>
     </ul>
 
-  <h1>大学</h1>
+  <h1> 逻辑谬误讲座 </h1>
   <ul>
-    <li>
-      <a href="https://www.bilibili.com/video/BV1jM4y1j7Ja/">勇于求知</a>，研究生招生宣讲，2023 年 7 月
-    </li>
-    <li>
-      <a href="./teach/index.html?p=learn.md">找到自己的绝活</a>，研究生入学座谈，2022 年 9 月
-    </li>
-    <li>
-      <a href="./teach/index.html?p=teach.md">不愤不启，不悱不发</a>，教研室座谈，2022 年 6 月
-    </li>
+    <li> <a href="https://yishuai.github.io/talk/fallacy/index.html?p=fallacy.md">逻辑谬误</a>，交大附中，2023 年 5 月 </li>
   </ul>
 
-  </body>
+</body>
 </html>
